// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation Modal Component should NOT display a confirmation modal: hidden 1`] = `
<screen>
  <div
    class="quipucords-modal quipucords-modal__hide-backdrop quipucords-modal__rcue-width quipucords-modal__confirmation"
  >
    <div />
  </div>
</screen>
`;

exports[`Confirmation Modal Component should allow custom content: custom 1`] = `
<screen>
  <div
    class="quipucords-modal quipucords-modal__hide-backdrop quipucords-modal__rcue-width quipucords-modal__confirmation pf-v5-c-backdrop__open"
  >
    <div>
      <div
        class="pf-v5-c-backdrop"
      >
        <div
          class="pf-v5-l-bullseye"
        >
          <div
            aria-label="t(modal.aria-label-default)"
            aria-labelledby="pf-modal-part-6"
            aria-modal="true"
            class="pf-v5-c-modal-box pf-m-align-top"
            data-ouia-component-id="OUIA-Generated-Modal-7"
            data-ouia-component-type="PF5/ModalContent"
            data-ouia-safe="true"
            id="pf-modal-part-6"
            role="dialog"
            style="--pf-v5-c-modal-box--m-align-top--spacer: 5%;"
          >
            <div
              class="pf-v5-c-alert pf-m-inline pf-m-plain pf-m-warning"
              data-ouia-component-id="OUIA-Generated-Alert-warning-4"
              data-ouia-component-type="PF5/Alert"
              data-ouia-safe="true"
            >
              <div
                class="pf-v5-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  />
                </svg>
              </div>
              <h4
                class="pf-v5-c-alert__title"
              >
                <span
                  class="pf-v5-screen-reader"
                >
                   Warning alert: 
                </span>
                 t(form-dialog.confirmation, {"context":"heading"}) 
              </h4>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</screen>
`;

exports[`Confirmation Modal Component should allow passed children, or specific props: body 1`] = `null`;

exports[`Confirmation Modal Component should allow passed children, or specific props: children 1`] = `null`;

exports[`Confirmation Modal Component should allow passed children, or specific props: heading 1`] = `
<h4
  class="pf-v5-c-alert__title"
>
  <span
    class="pf-v5-screen-reader"
  >
    Warning alert:
  </span>
  Lorem ipsum
</h4>
`;

exports[`Confirmation Modal Component should display a confirmation modal: show 1`] = `
<screen>
  <div
    class="quipucords-modal quipucords-modal__hide-backdrop quipucords-modal__rcue-width quipucords-modal__confirmation pf-v5-c-backdrop__open"
  >
    <div>
      <div
        class="pf-v5-c-backdrop"
      >
        <div
          class="pf-v5-l-bullseye"
        >
          <div
            aria-describedby="pf-modal-part-3"
            aria-label="t(modal.aria-label-default)"
            aria-labelledby="pf-modal-part-1"
            aria-modal="true"
            class="pf-v5-c-modal-box pf-m-align-top"
            data-ouia-component-id="OUIA-Generated-Modal-2"
            data-ouia-component-type="PF5/ModalContent"
            data-ouia-safe="true"
            id="pf-modal-part-1"
            role="dialog"
            style="--pf-v5-c-modal-box--m-align-top--spacer: 5%;"
          >
            <div
              class="pf-v5-c-modal-box__close"
            >
              <button
                aria-disabled="false"
                aria-label="Close"
                class="pf-v5-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Modal-2-ModalBoxCloseButton"
                data-ouia-component-type="PF5/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </button>
            </div>
            <header
              class="pf-v5-c-modal-box__header"
            >
              <h4
                class="pf-v5-c-title pf-m-md"
                data-ouia-component-id="OUIA-Generated-Title-2"
                data-ouia-component-type="PF5/Title"
                data-ouia-safe="true"
              >
                 Confirm 
              </h4>
            </header>
            <div
              class="pf-v5-c-modal-box__body"
              id="pf-modal-part-3"
            >
              <div
                class="pf-v5-c-alert pf-m-inline pf-m-plain pf-m-custom"
                data-ouia-component-id="OUIA-Generated-Alert-custom-2"
                data-ouia-component-type="PF5/Alert"
                data-ouia-safe="true"
              >
                <div
                  class="pf-v5-c-alert__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 896 1024"
                    width="1em"
                  >
                    <path
                      d="M448,0 C465.333333,0 480.333333,6.33333333 493,19 C505.666667,31.6666667 512,46.6666667 512,64 L512,106 L514.23,106.45 C587.89,121.39 648.48,157.24 696,214 C744,271.333333 768,338.666667 768,416 C768,500 780,568.666667 804,622 C818.666667,652.666667 841.333333,684 872,716 C873.773676,718.829136 875.780658,721.505113 878,724 C890,737.333333 896,752.333333 896,769 C896,785.666667 890,800.333333 878,813 C866,825.666667 850.666667,832 832,832 L63.3,832 C44.9533333,831.84 29.8533333,825.506667 18,813 C6,800.333333 0,785.666667 0,769 C0,752.333333 6,737.333333 18,724 L24,716 L25.06,714.9 C55.1933333,683.28 77.5066667,652.313333 92,622 C116,568.666667 128,500 128,416 C128,338.666667 152,271.333333 200,214 C248,156.666667 309.333333,120.666667 384,106 L384,63.31 C384.166667,46.27 390.5,31.5 403,19 C415.666667,6.33333333 430.666667,0 448,0 Z M576,896 L576,897.08 C575.74,932.6 563.073333,962.573333 538,987 C512.666667,1011.66667 482.666667,1024 448,1024 C413.333333,1024 383.333333,1011.66667 358,987 C332.666667,962.333333 320,932 320,896 L576,896 Z"
                    />
                  </svg>
                </div>
                <h4
                  class="pf-v5-c-alert__title"
                >
                  <span
                    class="pf-v5-screen-reader"
                  >
                     Custom alert: 
                  </span>
                   test 
                </h4>
                <div
                  class="pf-v5-c-alert__description"
                >
                   Test body 
                </div>
              </div>
            </div>
            <footer
              class="pf-v5-c-modal-box__footer"
            >
              <button
                aria-disabled="false"
                class="pf-v5-c-button pf-m-secondary"
                data-ouia-component-id="OUIA-Generated-Button-secondary-2"
                data-ouia-component-type="PF5/Button"
                data-ouia-safe="true"
                type="button"
              >
                 Cancel 
              </button>
            </footer>
          </div>
        </div>
      </div>
    </div>
  </div>
</screen>
`;

exports[`Confirmation Modal Component should render a connected component: connected 1`] = `
<screen>
  <div
    class="quipucords-modal quipucords-modal__hide-backdrop quipucords-modal__rcue-width quipucords-modal__confirmation pf-v5-c-backdrop__open"
  >
    <div>
      <div
        class="pf-v5-c-backdrop"
      >
        <div
          class="pf-v5-l-bullseye"
        >
          <div
            aria-describedby="pf-modal-part-2"
            aria-label="t(modal.aria-label-default)"
            aria-labelledby="pf-modal-part-0"
            aria-modal="true"
            class="pf-v5-c-modal-box pf-m-align-top"
            data-ouia-component-id="OUIA-Generated-Modal-1"
            data-ouia-component-type="PF5/ModalContent"
            data-ouia-safe="true"
            id="pf-modal-part-0"
            role="dialog"
            style="--pf-v5-c-modal-box--m-align-top--spacer: 5%;"
          >
            <div
              class="pf-v5-c-modal-box__close"
            >
              <button
                aria-disabled="false"
                aria-label="Close"
                class="pf-v5-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Modal-1-ModalBoxCloseButton"
                data-ouia-component-type="PF5/Button"
                data-ouia-safe="true"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v5-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 352 512"
                  width="1em"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
              </button>
            </div>
            <header
              class="pf-v5-c-modal-box__header"
            >
              <h4
                class="pf-v5-c-title pf-m-md"
                data-ouia-component-id="OUIA-Generated-Title-1"
                data-ouia-component-type="PF5/Title"
                data-ouia-safe="true"
              >
                 Confirm 
              </h4>
            </header>
            <div
              class="pf-v5-c-modal-box__body"
              id="pf-modal-part-2"
            >
              <div
                class="pf-v5-c-alert pf-m-inline pf-m-plain pf-m-custom"
                data-ouia-component-id="OUIA-Generated-Alert-custom-1"
                data-ouia-component-type="PF5/Alert"
                data-ouia-safe="true"
              >
                <div
                  class="pf-v5-c-alert__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 896 1024"
                    width="1em"
                  >
                    <path
                      d="M448,0 C465.333333,0 480.333333,6.33333333 493,19 C505.666667,31.6666667 512,46.6666667 512,64 L512,106 L514.23,106.45 C587.89,121.39 648.48,157.24 696,214 C744,271.333333 768,338.666667 768,416 C768,500 780,568.666667 804,622 C818.666667,652.666667 841.333333,684 872,716 C873.773676,718.829136 875.780658,721.505113 878,724 C890,737.333333 896,752.333333 896,769 C896,785.666667 890,800.333333 878,813 C866,825.666667 850.666667,832 832,832 L63.3,832 C44.9533333,831.84 29.8533333,825.506667 18,813 C6,800.333333 0,785.666667 0,769 C0,752.333333 6,737.333333 18,724 L24,716 L25.06,714.9 C55.1933333,683.28 77.5066667,652.313333 92,622 C116,568.666667 128,500 128,416 C128,338.666667 152,271.333333 200,214 C248,156.666667 309.333333,120.666667 384,106 L384,63.31 C384.166667,46.27 390.5,31.5 403,19 C415.666667,6.33333333 430.666667,0 448,0 Z M576,896 L576,897.08 C575.74,932.6 563.073333,962.573333 538,987 C512.666667,1011.66667 482.666667,1024 448,1024 C413.333333,1024 383.333333,1011.66667 358,987 C332.666667,962.333333 320,932 320,896 L576,896 Z"
                    />
                  </svg>
                </div>
                <h4
                  class="pf-v5-c-alert__title"
                >
                  <span
                    class="pf-v5-screen-reader"
                  >
                     Custom alert: 
                  </span>
                   test 
                </h4>
                <div
                  class="pf-v5-c-alert__description"
                >
                   Test body 
                </div>
              </div>
            </div>
            <footer
              class="pf-v5-c-modal-box__footer"
            >
              <button
                aria-disabled="false"
                class="pf-v5-c-button pf-m-secondary"
                data-ouia-component-id="OUIA-Generated-Button-secondary-1"
                data-ouia-component-type="PF5/Button"
                data-ouia-safe="true"
                type="button"
              >
                 Cancel 
              </button>
            </footer>
          </div>
        </div>
      </div>
    </div>
  </div>
</screen>
`;
